--- a/docs/.vuepress/public/view/index.html
+++ b/docs/.vuepress/public/view/index.html
@@ -5,7 +5,7 @@
     <meta charset="GBK">
     <link rel="icon"
         href="https://infinitypro-img.infinitynewtab.com/custom-icon/8001de1jd3n68lbfnxxt564xvb0vl5.png?imageMogr2/thumbnail/240x/format/webp/blur/1x0/quality/100|imageslim">
-    <title>znote</title>
+    <title>doc</title>
     <style>
         /* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"); */
         /* * {
@@ -450,8 +450,8 @@
                                     <div class="container">
                                         <div class="fl-wrap section-entry hiddec-anim" style="opacity: 1; ">
                                             <h1 class="BoardName">
-                                                <a href="/znote/" style="color: beige">Welcome
-                                                    to ZNOTE!</a>
+                                                <a href="/doc/" style="color: beige">Welcome
+                                                    to Wayne's Notebook !</a>
                                             </h1>
 
                                         </div>
